# blobdb

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: add.rs  read.rs
docs/: Block Device Volumes.md  Core Concepts.md  Power Loss Protection.md  Storage Layout.md  Topics for Investigation.md
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/blob/: mod.rs
lib/src/block/: block.rs  block_digest.rs  blockifier.rs  import_blob.rs  mod.rs  packets.rs
lib/src/block_device/: allocation_tree.rs  block_device.rs  extent.rs  ioctl.rs  mod.rs
lib/src/block_device/tests/: allocation_tree.rs  extent.rs  mod.rs
lib/src/db/: db.rs  fs_db.rs
lib/src/file/: blob.rs  file_id.rs  mod.rs  path.rs  read_blob.rs
lib/src/packet/: allocation_table.rs  blob_data.rs  invalid.rs  key_table.rs  mod.rs  packet.rs  packetizer.rs  raw.rs  type_id_and_length.rs
lib/src/units/: block_count.rs  block_group_count.rs  block_group_index.rs  byte_count.rs  count.rs  mod.rs
lib/src/volume/: mod.rs  volume.rs
lib/src/volume/block_device/: allocation_tree.rs  block_count.rs  block_device.rs  block_group_count.rs  block_group_index.rs  byte_count.rs  extent.rs  mod.rs
lib/src/volume/block_device/tests/: allocation_tree.rs  extent.rs
src/: add.rs  blob_id.rs  block.rs  db_id.rs  main.rs  options.rs  packet.rs
src/cli/: add.rs  mod.rs  options.rs  read.rs
src/lib/: blob.rs  blob_id.rs  block.rs  db.rs  db_id.rs  mod.rs  packet.rs
src/lib/blob/: blob_id.rs  mod.rs
src/lib/block/: block.rs  block_digest.rs  blockifier.rs  build.rs  import_blob.rs  mod.rs  packet_provider.rs  packets.rs  signature.rs
src/lib/db/: db.rs  db_id.rs  fs_db.rs  mod.rs
src/lib/file/: blob.rs  blob_data.rs  file_builder_command.rs  file_id.rs  mod.rs  path.rs  read_blob.rs
src/lib/io/: mod.rs
src/lib/packet/: allocation_table.rs  blob_data.rs  draft_blob_data.rs  invalid.rs  key_table.rs  mod.rs  packet.rs  packetizer.rs  raw.rs  type_id_and_length.rs
