[package]
name = "blobdb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.0.16", features = ["derive"] }
sha2 = "=0.10.6"
itertools = "=0.10.5"
byteorder = "=1.4.3"
arrayref = "=0.3.6"
fs2 = "=0.4.3"
tee_readwrite = "=0.1.0"
hex = "=0.4.3"
tempfile = "=3.3.0"