[package]
name = "blobdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "=0.3.7"
byteorder = "=1.5.0"
fs2 = "=0.4.3"
hex = "=0.4.3"
itertools = "=0.12.1"
sha2 = "=0.10.8"
tee_readwrite = "=0.2.0"
tempfile = "=3.10.1"
