[package]
name = "blobdb"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "=0.3.9"
byteorder = "=1.5.0"
fs2 = "=0.4.3"
hex = "=0.4.3"
itertools = "=0.14.0"
sha2 = "=0.10.9"
tee_readwrite = "=0.2.0"
tempfile = "=3.20.0"
