[package]
name = "blobdb"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "=0.3.9"
byteorder = "=1.5.0"
derive_more = { version = "=2.1.1", features = ["add", "add_assign", "deref", "deref_mut", "display", "from", "into"] }
fs2 = "=0.4.3"
hex = "=0.4.3"
itertools = "=0.14.0"
linux-raw-sys = "=0.9.4"
rustix = { version = "=1.1.4", features = ["fs", "linux_5_1"] }
sha2 = "=0.10.9"
tee_readwrite = "=0.2.0"
tempfile = "=3.23.0"
